# dmj-vault

./: LICENSE  README.md
.claude/commands/: release-notes.md
dmj_vault/apps/admin/: app.py  start.py  wsgi.py
dmj_vault/apps/admin/templates/: base.html  key_detail.html  keys.html  login.html
dmj_vault/apps/api/: main.py  start.py  wsgi.py
dmj_vault/dbaccess/: __init__.py  models.py
dmj_vault/dbserver/: db.py  set_admin_account.py  setup_schema.py
dmj_vault/dbserver/migrations/: 20260425-1.py  20260429-1.py
packaging/: build_deb.sh  deploy.sh
packaging/dmj-vault-apps-admin/: pyproject.toml
packaging/dmj-vault-apps-admin/debian/: changelog  control  copyright  dmj-vault-apps-admin.install  dmj-vault-apps-admin.service  postinst  rules
packaging/dmj-vault-apps-api/: pyproject.toml
packaging/dmj-vault-apps-api/debian/: changelog  control  copyright  dmj-vault-apps-api.install  dmj-vault-apps-api.nginx  dmj-vault-apps-api.service  postinst  prerm  rules
packaging/dmj-vault-dbaccess/: pyproject.toml
packaging/dmj-vault-dbaccess/debian/: changelog  control  copyright  dmj-vault-dbaccess.install  rules
packaging/dmj-vault-dbserver/: pyproject.toml
packaging/dmj-vault-dbserver/debian/: 99-dmj-vault.cnf  changelog  control  copyright  dmj-vault-dbserver.install  postinst  rules
