[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmj-vault-apps-admin"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = []
license = {text = "MIT"}

[project.scripts]
dmj-vault-apps-admin-start = "dmj_vault.apps.admin.start:main"

[tool.dmj-vault]
source-dir = "dmj_vault/apps/admin"

[tool.setuptools.dynamic]
version = {file = "debian/version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dmj_vault.apps.admin", "dmj_vault.apps.admin.*"]

[tool.setuptools.package-data]
"dmj_vault.apps.admin" = ["templates/*.html", "static/*.css", "static/*.js"]
