[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmj-vault-apps-api"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = []
license = {text = "MIT"}

[project.scripts]
dmj-vault-apps-api-start = "dmj_vault.apps.api.start:main"
dmj-vault-apps-api-nginx-update = "dmj_vault.apps.api.start:update_nginx_main"

[tool.dmj-vault]
source-dir = "dmj_vault/apps/api"

[tool.setuptools.dynamic]
version = {file = "debian/version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dmj_vault.apps.api", "dmj_vault.apps.api.*"]
