[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dmj-vault-dbaccess"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = []
license = {text = "MIT"}

[tool.dmj-vault]
source-dir = "dmj_vault/dbaccess"

[tool.setuptools.dynamic]
version = {file = "debian/version.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["dmj_vault.dbaccess", "dmj_vault.dbaccess.*"]
